conexion de css y primer container

--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tus_pelis</title>
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <h1>
-    🎞️Tus Pelis🎞️
-    </h1>
+    <!---encabezado-->
+    <header>
+        <h1>🎞️Tus_pelis🎞️</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Películas</a></li>
+                <li><a href="#">Series</a></li>
+                <li><a href="#">Contacto</a></li>
+            </ul>
+        </nav>
+
+
 </body>
 </html>
