--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
 <body>
     <!---encabezado-->
     <header>
+
         <h1>🎞️Tus_pelis🎞️</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Películas</a></li>
-                <li><a href="#">Series</a></li>
-                <li><a href="#">Contacto</a></li>
+        <nav class="navbar">
+           
+            <ul class="nav-menu">
+                <li class="nav-item">
+                    <a href="#">peliculas</a></li>
+                <li class="nav-item">
+                    <a href="#">novelas</a></li>
+                <li class="nav-item">
+                    <a href="#">series</a></li>
+                <li class="nav-item">
+                    <a href="#">referencias</a></li>
             </ul>
         </nav>
 
