--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Entretenimiento Infantil</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
