--- a/index.html
+++ b/index.html
@@ -37,21 +37,17 @@
             <div class="card">
                 <img src="https://upload.wikimedia.org/wikipedia/en/1/13/Toy_Story.jpg">
                 <h3>Toy Story</h3>
-                <p>Toy Story (1995) esUna película pionera animada por CGI sobre la vida secreta de los juguetes, centrada en los celos entre <strong>Woody</strong>,
-                     un muñeco vaquero, y Buzz Lightyear, una nueva figura de acción de un ranger espacial..
-                     Cuando se separan de su dueño, Andy, deben superar su rivalidad para regresar a casa. </p>
+                <p>Toy Story (1995) esUna película pionera animada por CGI sobre la vida secreta de los juguetes. </p>
             </div>
 
             <div class="card">
                 <img src="https://lumiere-a.akamaihd.net/v1/images/p_frozen_18373_3131259c.jpeg?region=0%2C0%2C540%2C810">
                 <h3>Frozen</h3>
-                <p>Anna, una intrépida optimista que emprende un viaje con Kristoff, Sven y el muñeco de nieve Olaf para encontrar a su hermana <strong>Elsa</strong>, cuyos poderes de hielo 
-                    han sumido al reino de Arendelle en un invierno eterno, explorando el amor fraternal como verdadera salvación. .</p>
+                <p>Anna, una intrépida optimista que emprende un viaje con Kristoff, Sven y el muñeco de nieve Olaf para encontrar a su hermana <strong>Elsa</strong>.</p>
             </div>
 
             <div class="card">
-                <img src="https://disney.images.edge.bamgrid.com/ripcut-delivery/v2/variant/disney/3969ca4d-9dbc-474c-81b4-97b0ac493022/compose?
-                aspectRatio=1.78&format=webp&width=1200">
+                <img src="https://lumiere-a.akamaihd.net/v1/images/image_8b5ca578.jpeg">
                 <h3>El Rey León</h3>
                 <p>La historia de Simba y su destino como rey.</p>
             </div>
@@ -75,8 +71,7 @@
             </div>
 
             <div class="card">
-                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/7/7b/Shrek_%282001_animated_feature_film%29.
-                jpg/250px-Shrek_%282001_animated_feature_film%29.jpg">
+                <img src="https://play-lh.googleusercontent.com/6eRpIKSEHPNny49xvp28qdODpI2F3rH7vvUjk7xoqHm54JHEwITQtv3rwuLkk838GkZPYjyUOONb8cEM5bM=w240-h480-rw">
                 <h3>Shrek</h3>
                 <p>Un ogro vive aventuras con un burro parlante.</p>
             </div>
@@ -88,15 +83,13 @@
             </div>
 
             <div class="card">
-                <img src="https://disney.images.edge.bamgrid.com/ripcut-delivery/v2/variant/disney/019ba1f4-5c75-71d5-8638-98e98a4
-                2782b/compose?aspectRatio=1.78&format=webp&width=1200">
+                <img src="https://es.web.img3.acsta.net/pictures/14/02/13/11/08/054573.jpg">
                 <h3>Buscando a Nemo</h3>
                 <p>Un pez recorre el océano buscando a su hijo.</p>
             </div>
 
             <div class="card">
-                <img src="https://static.wikia.nocookie.net/el-mundo-de-cars/images/0/00/Cars_-_poster.jpg/revision/latest/thu
-                mbnail/width/360/height/360?cb=20240314223709&path-prefix=es">
+                <img src="https://m.media-amazon.com/images/I/71G7sCR1ZdS._AC_UF894,1000_QL80_.jpg">
                 <h3>Cars</h3>
                 <p>Autos que compiten y aprenden sobre amistad.</p>
             </div>
@@ -120,13 +113,13 @@
             </div>
 
             <div class="card">
-                <img src="https://m.media-amazon.com/images/I/81C9FT0-8HL._AC_SY679_.jpg">
+                <img src="https://m.media-amazon.com/images/S/pv-target-images/9cfb58a8066fbe4e1114f82336afda42be42dd76ecb222f15eef5163b9688f28.jpg">
                 <h3>Mi Villano Favorito</h3>
                 <p>Gru y los Minions planean travesuras.</p>
             </div>
 
             <div class="card">
-                <img src="https://m.media-amazon.com/images/I/81YzHKe9Z+L._AC_SY679_.jpg">
+                <img src="https://m.media-amazon.com/images/M/MV5BZDU5MDNiMGItYjVmZi00NDUxLTg2OTktNGE0NzNlNzM4NzgyXkEyXkFqcGc@._V1_.jpg">
                 <h3>Kung Fu Panda</h3>
                 <p>Un panda se convierte en guerrero dragón.</p>
             </div>
