--- a/serie.html
+++ b/serie.html
@@ -1,5 +1,15 @@
 
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Entretenimiento Infantil</title>
+</head>
+<body>
+    
+</body>
+</html>
 
 <section id="series">
         <h2>Series</h2>
