suebidno html series

--- a/serie.html
+++ b/serie.html
@@ -5,7 +5,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entretenimiento Infantil</title>
-</head>
+     <link rel="stylesheet" href="./css/index.css">
+
+<header>
+    <h1>Plataforma de Entretenimiento</h1>
+    <p>Películas, Series, Novelas y Referencias</p>
+</header>
+
+<!-- MENÚ -->
+<nav>
+    <ul>
+        <li><a href="#peliculas">Películas</a></li>
+        <li><a href="#series">Series</a></li>
+        <li><a href="#novelas">Novelas</a></li>
+        <li><a href="#referencias">Referencias</a></li>
+    </ul>
+</nav>
+
+
+<div class="serie-container">
+
+
+    <!---series-->
+
+    <section id="series">
+        <h2>Series para pasar el rato</h2>
+
+        <div class="series-grid">
+
+
+
+
+
+
+
+
+
+        </div>
+    </section>
+
+</div>
+
+
+
+
+
+
+
+
+
+
 <body>
     
 </body>
