--- a/serie.html
+++ b/serie.html
@@ -1,7 +1,11 @@
-
-
-
-<section id="series">
-        <h2>Series</h2>
-        <p>Aquí puedes agregar series infantiles o juveniles.</p>
-    </section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
+</html>
