subiendo html series

--- a/serie.html
+++ b/serie.html
@@ -34,6 +34,64 @@
         <div class="series-grid">
 
 
+            <div class="series-card">
+                <img src="https://mediaproxy.tvtropes.org/width/1200/https://static.tvtropes.org/pmwiki/pub/images/breaking_bad_4.png">
+                <h3>Breaking Bad</h3>
+                <p>Un profesor de química se convierte en fabricante de metanfetamina tras ser diagnosticado con cáncer. </p>
+            </div>
+
+            <div class="series-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/b1/Stranger_Things_season_1.jpg/250px-Stranger_Things_season_1.jpg">
+                <h3>Stranger Things</h3>
+                <p>Un grupo de niños enfrenta fenómenos sobrenaturales en un pequeño pueblo.. </p>
+            </div>
+
+            <div class="series-card">
+                <img src="https://m.media-amazon.com/images/M/MV5BMTNhMDJmNmYtNDQ5OS00ODdlLWE0ZDAtZTgyYTIwNDY3OTU3XkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg">
+                <h3>Game of Thrones</h3>
+                <p>Familias nobles luchan por el control del Trono de Hierro en un mundo medieval fantástico. </p>
+            </div>
+
+            <div class="series-card">
+                <img src="https://static.wikia.nocookie.net/thewalkingdead/images/0/0e/The-walking-dead-season-8-key-art-rick-lincoln-negan-dean-morgan-400x600.jpg/revision/latest?cb=20180610131711&path-prefix=es">
+                <h3>The Walking Dead</h3>
+                <p>Un grupo de sobrevivientes intenta vivir en un mundo lleno de zombis. </p>
+            </div>
+
+             <div class="series-card">
+                <img src="https://m.media-amazon.com/images/M/MV5BN2Q2NmZjMzQtM2ZhYS00NWM3LTg0MDktYjNkNWYzM2MyYjI5XkEyXkFqcGc@._V1_.jpg">
+                <h3>La Casa de Papel</h3>
+                <p>Un grupo de criminales ejecuta el mayor atraco a la Fábrica Nacional de Moneda y Timbre. </p>
+            </div>
+
+            <div class="series-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/1/13/Toy_Story.jpg">
+                <h3>Dark</h3>
+                <p>Misteriosas desapariciones revelan secretos familiares y viajes en el tiempo. </p>
+            </div>
+
+             <div class="series-card">
+                <img src="https://m.media-amazon.com/images/M/MV5BOTU2YmM5ZjctOGVlMC00YTczLTljM2MtYjhlNGI5YWMyZjFkXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg">
+                <h3>Friends</h3>
+                <p>Seis amigos viven situaciones divertidas mientras intentan triunfar en Nueva York. </p>
+            </div>
+
+            <div class="series-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/a/ae/The_Office_Season_8.jpg">
+                <h3>The Office</h3>
+                <p>Comedia estilo documental sobre empleados de una empresa de papel.</p>
+            </div>
+                
+            <div class="series-card">
+                <img src="https://m.media-amazon.com/images/M/MV5BZjVlN2M2N2MtOWViZC00MzIxLTlhZWEtMTIwNDIwMzE3ZWJiXkEyXkFqcGc@._V1_.jpg">
+                <h3>Euphoriae</h3>
+                <p>Adolescentes enfrentan drogas, amor y problemas emocionales.</p>
+            </div>
+
+
+
+
+
 
 
 
