--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Entretenimiento Infantil</title>
+    <title>👦🏽Entretenimiento Infantil👦🏽</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 
 <body>
 
