coneccion con las paginas entre si

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 </header>
 
 <!-- MENÚ -->
-<nav>
+ <nav>
     <ul>
-        <li><a href="#peliculas">Películas</a></li>
-        <li><a href="#series">Series</a></li>
-        <li><a href="#novelas">Novelas</a></li>
-        <li><a href="#referencias">Referencias</a></li>
+        <li><a href="index.html">Películas</a></li>
+        <li><a href="serie.html">Series</a></li>
+        <li><a href="novelas.html">Novelas</a></li>
+        <li><a href="referencias.html">Referencias</a></li>
     </ul>
 </nav>
-
 <!-- CONTENEDOR -->
 <div class="container">
 
