--- a/serie.html
+++ b/serie.html
@@ -1,7 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/serie.css">
+</head>
+<body>
+    <nav>
+    <ul>
+        <li><a href="index.html">Películas</a></li>
+        <li><a href="serie.html">Series</a></li>
+        <li><a href="novelas.html">Novelas</a></li>
+        <li><a href="referencias.html">Referencias</a></li>
+    </ul>
+</nav>
 
-
-<<<<<<< HEAD
-<div class="serie-container">
+    <div class="serie-container">
 
 
     <!---series-->
@@ -82,23 +97,5 @@
 
 </div>
 
-
-
-
-
-
-
-
-
-
-<body>
     
 </body>
-</html>
-=======
->>>>>>> c389ad7f86123a4a21e6cefd966f8f7ea8584430
-
-<section id="series">
-        <h2>Series</h2>
-        <p>Aquí puedes agregar series infantiles o juveniles.</p>
-    </section>
