--- a/referencias.html
+++ b/referencias.html
@@ -6,6 +6,14 @@
     <title>Referencias</title>
 </head>
 <body>
+     <nav>
+    <ul>
+        <li><a href="index.html">Películas</a></li>
+        <li><a href="serie.html">Series</a></li>
+        <li><a href="novelas.html">Novelas</a></li>
+        <li><a href="referencias.html">Referencias</a></li>
+    </ul>
+</nav>
     
 </body>
 </html>
