terminando series section

--- a/index.html
+++ b/index.html
@@ -126,13 +126,7 @@
             </div>
 
         </div>
-    </section>
-
-    <!-- SERIES -->
-    <section id="series">
-        <h2>Series</h2>
-        <p>Aquí puedes agregar series infantiles o juveniles.</p>
-    </section>
+    </section
 
     <!-- NOVELAS -->
     <section id="novelas">
@@ -149,7 +143,9 @@
 </div>
 
 <footer>
-    <p>© 2026 Plataforma de Entretenimiento</p>
+    <p>© 2026 Plataforma de Entretenimiento
+        <strong>Desarrollado por vargas y sanchez</strong>
+    </p>
 </footer>
 
 </body>
