--- a/serie.html
+++ b/serie.html
@@ -1,6 +1,30 @@
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>👦🏽Entretenimiento Infantil👦🏽</title>
+    <link rel="stylesheet" href="./css/serie.css">
+</head>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 
-<<<<<<< HEAD
+<body>
+    <header>
+    <h1>Plataforma de Entretenimiento</h1>
+    <p>Películas, Series, Novelas y Referencias</p>
+</header>
+
+<!-- MENÚ -->
+<nav>
+    <ul>
+        <li><a href="#peliculas">Películas</a></li>
+        <li><a href="#series">Series</a></li>
+        <li><a href="#novelas">Novelas</a></li>
+        <li><a href="#referencias">Referencias</a></li>
+    </ul>
+</nav>
+
+
 <div class="serie-container">
 
 
@@ -66,14 +90,18 @@
                 <p>Adolescentes enfrentan drogas, amor y problemas emocionales.</p>
             </div>
 
+            <div class="series-card">
+                <img src="https://m.media-amazon.com/images/M/MV5BZjVlN2M2N2MtOWViZC00MzIxLTlhZWEtMTIwNDIwMzE3ZWJiXkEyXkFqcGc@._V1_.jpg">
+                <h3>Narcos      </h3>
+                <p>Adolescentes enfrentan drogas, amor y problemas emocionales.</p>
+            </div>
+            
 
-
-
-
-
-
-
-
+            <div class="series-card">
+                <img src="https://m.media-amazon.com/images/M/MV5BZjVlN2M2N2MtOWViZC00MzIxLTlhZWEtMTIwNDIwMzE3ZWJiXkEyXkFqcGc@._V1_.jpg">
+                <h3>Narcos      </h3>
+                <p>Adolescentes enfrentan drogas, amor y problemas emocionales.</p>
+            </div>
 
 
 
@@ -91,14 +119,12 @@
 
 
 
-<body>
+<footer>
+    <p>© 2026 Plataforma de Entretenimiento
+        <strong>Desarrollado por vargas y sanchez</strong>
+    </p>
+</footer>
     
 </body>
 </html>
-=======
->>>>>>> c389ad7f86123a4a21e6cefd966f8f7ea8584430
 
-<section id="series">
-        <h2>Series</h2>
-        <p>Aquí puedes agregar series infantiles o juveniles.</p>
-    </section>
