--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <header>
     <h1>Plataforma de Entretenimiento</h1>
     <p>Películas, Series, Novelas y Referencias</p>
+    <video width="800" height="360" src="./img/video bucle.mp4" autoplay loop muted></video>
+    
 </header>
 
 <!-- MENÚ -->
