comienzo de css de series

--- a/serie.html
+++ b/serie.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="./css/serie.css">
 </head>
 <body>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+
+    <header>
+    <h1>Plataforma de Entretenimiento</h1>
+    <p>Películas, Series, Novelas y Referencias</p>
+</header>
+
     <nav>
     <ul>
         <li><a href="index.html">Películas</a></li>
