bajando cambios del css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>👦🏽Entretenimiento Infantil👦🏽</title>
+    <title>👦🏽PELIS INCREIBLES👦🏽</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
@@ -129,6 +129,12 @@
         </div>
     </section
 
+
+
+
+
+
+    
     <!-- NOVELAS -->
     <section id="novelas">
         <h2>Novelas</h2>
