--- a/serie.html
+++ b/serie.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>LAS MEJORES SERIES</title>
     <link rel="stylesheet" href="./css/serie.css">
 </head>
 <body>
@@ -12,7 +12,9 @@
     <header>
     <h1>Plataforma de Entretenimiento</h1>
     <p>Películas, Series, Novelas y Referencias</p>
+    <video width="800" height="360" src="./img/bucle serie 1.mp4" autoplay loop muted></video>
 </header>
+
 
     <nav>
     <ul>
@@ -24,12 +26,8 @@
 </nav>
 
 
-<<<<<<< HEAD
-<div class="serie-container">
-=======
-    <div class="serie-container">
->>>>>>> 67b8a6f74884a3424c5b4e79906515d73d86f748
 
+<div class="serie-container">
 
     <!---series-->
 
@@ -94,17 +92,34 @@
             </div>
 
             <div class="series-card">
-                <img src="https://m.media-amazon.com/images/M/MV5BZjVlN2M2N2MtOWViZC00MzIxLTlhZWEtMTIwNDIwMzE3ZWJiXkEyXkFqcGc@._V1_.jpg">
+                <img src="https://es.web.img3.acsta.net/pictures/15/07/29/14/33/086520.jpg">
                 <h3>Narcos      </h3>
-                <p>Adolescentes enfrentan drogas, amor y problemas emocionales.</p>
+                <p>Relata el auge del narcotráfico en Colombia y la historia de Pablo Escobar..</p>
             </div>
             
 
             <div class="series-card">
                 <img src="https://m.media-amazon.com/images/M/MV5BZjVlN2M2N2MtOWViZC00MzIxLTlhZWEtMTIwNDIwMzE3ZWJiXkEyXkFqcGc@._V1_.jpg">
-                <h3>Narcos      </h3>
+                <h3>The Boys     </h3>
                 <p>Adolescentes enfrentan drogas, amor y problemas emocionales.</p>
             </div>
+
+            
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
