avance a novelas todo perfecto

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Plataforma de Entretenimiento</h1>
     <p>Películas, Series, Novelas y Referencias</p>
     <video width="800" height="360" src="./img/bucle 3.mp4" autoplay loop muted></video>
-    <video width="800" height="360" src="./img/bucle 2.mp4" autoplay loop muted></video>
+    <video class="bg-video" src="./img/bucle 2.mp4" autoplay loop muted></video>
 </header>
 
 <!-- MENÚ -->
