--- a/serie.html
+++ b/serie.html
@@ -12,7 +12,7 @@
     <header>
     <h1>Plataforma de Entretenimiento</h1>
     <p>Películas, Series, Novelas y Referencias</p>
-    <video width="800" height="360" src="./img/bucle serie 1.mp4" autoplay loop muted></video>
+    <video class="bg-video"src="./img/bucle serie 1.mp4" autoplay loop muted></video>
 </header>
 
 
@@ -99,7 +99,7 @@
             
 
             <div class="series-card">
-                <img src="https://m.media-amazon.com/images/M/MV5BZjVlN2M2N2MtOWViZC00MzIxLTlhZWEtMTIwNDIwMzE3ZWJiXkEyXkFqcGc@._V1_.jpg">
+                <img src="https://upload.wikimedia.org/wikipedia/en/1/14/The_Boys_Season_2.jpg">
                 <h3>The Boys     </h3>
                 <p>Adolescentes enfrentan drogas, amor y problemas emocionales.</p>
             </div>
