--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <header>
-    <h1>Plataforma de Entretenimiento</h1>
+    <h1>TUS_PELIS.COM</h1>
     <p>Películas, Series, Novelas y Referencias</p>
     <video width="800" height="360" src="./img/bucle 3.mp4" autoplay loop muted></video>
     <video class="bg-video" src="./img/bucle 2.mp4" autoplay loop muted></video>
@@ -127,25 +127,9 @@
             </div>
 
         </div>
-    </section
-
-
-
-
-
-
-    
-    <!-- NOVELAS -->
-    <section id="novelas">
-        <h2>Novelas</h2>
-        <p>Espacio para novelas o telenovelas.</p>
     </section>
 
-    <!-- REFERENCIAS -->
-    <section id="referencias">
-        <h2>Referencias</h2>
-        <p>Imágenes tomadas de sitios públicos con fines educativos.</p>
-    </section>
+
 
 </div>
 
