--- a/serie.html
+++ b/serie.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
 
     <header>
-    <h1>Plataforma de Entretenimiento</h1>
+    <h1>TUS_PELIS.COM</h1>
     <p>Películas, Series, Novelas y Referencias</p>
     <video class="bg-video"src="./img/bucle serie 1.mp4" autoplay loop muted></video>
 </header>
