subiendo contenido de refencias

--- a/referencias.html
+++ b/referencias.html
@@ -16,5 +16,139 @@
     </ul>
 </nav>
     
+
+<section id="referencias">
+    <h2>Referencias Destacadas del Entretenimiento</h2>
+
+    <!-- ====== REFERENCIAS PELÍCULAS ====== -->
+    <div class="referencias-container">
+        <h3>Mejores Películas</h3>
+
+        <div class="referencias-grid">
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/8/8a/Dark_Knight.jpg">
+                <h4>The Dark Knight</h4>
+                <p>Considerada una de las mejores películas de superhéroes por su historia y actuación.</p>
+            </div>
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/1/1c/Titanic_poster.jpg">
+                <h4>Titanic</h4>
+                <p>Un clásico del romance y el drama basado en el trágico hundimiento del Titanic.</p>
+            </div>
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/2/22/Avatar_Teaser_Poster.jpg">
+                <h4>Avatar</h4>
+                <p>Revolucionó el cine con sus efectos visuales y su mundo de ciencia ficción.</p>
+            </div>
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/7/7a/Avengers_Endgame_poster.jpg">
+                <h4>Avengers: Endgame</h4>
+                <p>Una de las películas más taquilleras de la historia del cine.</p>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- ====== REFERENCIAS NOVELAS ====== -->
+    <div class="referencias-container">
+        <h3>Mejores Novelas</h3>
+
+        <div class="referencias-grid">
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/7/7b/Betty_la_fea.jpg">
+                <h4>Yo Soy Betty, la Fea</h4>
+                <p>La novela colombiana más exitosa e influyente a nivel mundial.</p>
+            </div>
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/0/0b/Cafe_con_aroma_de_mujer_1994.jpg">
+                <h4>Café con Aroma de Mujer</h4>
+                <p>Un ícono de las historias románticas latinoamericanas.</p>
+            </div>
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/3/3d/Pasion_de_Gavilanes.jpg">
+                <h4>Pasión de Gavilanes</h4>
+                <p>Reconocida por su drama familiar y romances intensos.</p>
+            </div>
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/8/8f/La_Reina_del_Flow.jpg">
+                <h4>La Reina del Flow</h4>
+                <p>Éxito moderno que mezcla música urbana con venganza.</p>
+            </div>
+
+        </div>
+    </div>
+
+
+    <!-- ====== REFERENCIAS SERIES ====== -->
+    <div class="referencias-container">
+        <h3>Mejores Series</h3>
+
+        <div class="referencias-grid">
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/9/9f/Breaking_Bad_season_5B.jpg">
+                <h4>Breaking Bad</h4>
+                <p>La transformación de un profesor en narcotraficante la volvió legendaria.</p>
+            </div>
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/3/38/Game_of_Thrones_Season_1.jpg">
+                <h4>Game of Thrones</h4>
+                <p>Una de las series más épicas y vistas de la televisión.</p>
+            </div>
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/7/7e/Stranger_Things_season_4.jpg">
+                <h4>Stranger Things</h4>
+                <p>Ciencia ficción y nostalgia de los 80 que conquistó al mundo.</p>
+            </div>
+
+            <div class="referencias-card">
+                <img src="https://upload.wikimedia.org/wikipedia/en/6/65/The_Walking_Dead_Season_1.jpg">
+                <h4>The Walking Dead</h4>
+                <p>Serie icónica del género apocalíptico y de supervivencia.</p>
+            </div>
+
+        </div>
+    </div>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
