corregido novelas ya aparecen las letras encima del video

--- a/serie.html
+++ b/serie.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="series-card">
-                <img src="https://static.wikia.nocookie.net/thewalkingdead/images/0/0e/The-walking-dead-season-8-key-art-rick-lincoln-negan-dean-morgan-400x600.jpg/revision/latest?cb=20180610131711&path-prefix=es">
+                <img src=https://preview.redd.it/when-was-the-downfall-of-the-the-walking-dead-v0-jlwvp4luhnhe1.jpeg?width=640&crop=smart&auto=webp&s=24f3a4ae80f34040de98c2cb21d37ff0cd58ba8d>
                 <h3>The Walking Dead</h3>
                 <p>Un grupo de sobrevivientes intenta vivir en un mundo lleno de zombis. </p>
             </div>
@@ -128,7 +128,8 @@
 
 </div>
 <footer>
-    <p>© 2026 Plataforma de Entretenimiento
+    <p>© 2026 TUS_PELIS.COM
+        <br>
         <strong>Desarrollado por vargas y sanchez</strong>
     </p>
 </footer>
