--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
 </div>
 
 <footer>
-    <p>© 2026 Plataforma de Entretenimiento
+    <p>© 2026 TUS_PELIS.COM
+        <br>
         <strong>Desarrollado por vargas y sanchez</strong>
     </p>
 </footer>
