hacia falta conectar el href de referencias

--- a/referencias.html
+++ b/referencias.html
@@ -34,7 +34,7 @@
         <li><a href="index.html">Películas</a></li>
         <li><a href="serie.html">Series</a></li>
         <li><a href="novelas.html">Novelas</a></li>
-        <li><a href="referencias.html"></a></li>
+        <li><a href="referencias.html">Referencias</a></li>
     </ul>
 </nav>
 
